--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         function selectDiff(diff) {
             window.location.href = `game.html?diff=${diff}`;
         }
-    </script>
+    </script
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
