--- a/shop.html
+++ b/shop.html
@@ -81,5 +81,6 @@
             alert("이 아이템은 게임 플레이 도중에 하단 버튼을 눌러 사용할 수 있습니다.");
         }
     </script>
+    <script src="js/shop.js"></script>
 </body>
 </html>
