--- a/game.html
+++ b/game.html
@@ -52,6 +52,6 @@
         </div>
     </div>
 
-    <script type="module" src="game-main.js"></script>
+    <script type="module" src="js/game-main.js"></script>
 </body>
 </html>
