--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             window.location.href = `game.html?diff=${diff}`;
         }
     </script
-    <script type="module" src="js/index.js"></script>
+
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
