--- a/game.html
+++ b/game.html
@@ -11,24 +11,31 @@
         <div class="header">
             <div class="stat"><span>BEST</span><strong id="ui-best">A</strong></div>
             <div class="stat"><span>SCORE</span><strong id="ui-stars">0</strong></div>
-            <div class="stat"><span>LEVEL</span><strong id="ui-diff" style="font-size:12px;">-</strong></div>
+            <div class="stat"><span>LEVEL</span><strong id="ui-diff">-</strong></div>
         </div>
 
         <div class="game-area">
-            <div class="next-zone">
-                <span class="next-label">NEXT</span>
-                <div id="next-preview" class="shape-container" style="transform: scale(0.6);"></div>
-            </div>
-            <div class="drag-zone">
-                <div id="source-block" class="shape-container"></div>
-            </div>
+            <div class="next-zone"><div id="next-preview" class="shape-container" style="transform: scale(0.7);"></div></div>
+            <div class="drag-zone"><div id="source-block" class="shape-container"></div></div>
         </div>
 
         <div id="grid-container" class="grid-container"></div>
 
-        <div style="margin-top: 20px; display:flex; gap:10px;">
-            <button class="btn" style="width:100px; font-size:0.9rem;" onclick="location.href='index.html'">MENU</button>
-            <button class="btn btn-primary" style="width:140px; font-size:0.9rem;" onclick="alert('광고보고 +5 스타!')">AD (+5★)</button>
+        <div style="display:flex; width:100%; max-width:380px; gap:5px; margin-bottom:15px;">
+            <button class="btn" style="flex:1;" onclick="window.gameLogic.useRefresh()">🔄 갱신(1★)</button>
+            <button class="btn" style="flex:1;" onclick="window.gameLogic.useHammer()">🔨 망치(2★)</button>
+        </div>
+
+        <div style="display:flex; width:100%; max-width:380px; gap:5px;">
+            <button class="btn" style="flex:1;" onclick="location.href='index.html'">메인 메뉴</button>
+            <button class="btn btn-primary" style="flex:1;" onclick="location.href='shop.html'">상점 가기</button>
+        </div>
+
+        <div id="ad-container" style="margin-top: 20px;">
+            <script>
+              atOptions = { 'key' : '8806e983d7b1aa394a76278f45c55249', 'format' : 'iframe', 'height' : 250, 'width' : 300, 'params' : {} };
+            </script>
+            <script src="https://www.highperformanceformat.com/8806e983d7b1aa394a76278f45c55249/invoke.js"></script>
         </div>
     </div>
 
@@ -38,20 +45,19 @@
         <div class="popup-box">
             <h2 style="color:#e74c3c;">GAME OVER</h2>
             <p>기록: <strong id="over-best" style="color:var(--accent); font-size:1.5rem;">A</strong></p>
-            
-            <div id="save-area">
-                <input type="text" id="username-input" class="input-name" placeholder="닉네임 입력 (최대 8자)" maxlength="8">
-                <button class="btn btn-primary" style="width:100%; margin-bottom:10px;" id="btn-save-score">기록 저장하기</button>
+            <div id="area-new-user" style="display:none;">
+                <input type="text" id="username-input" placeholder="닉네임 (변경불가)" style="width:100%; padding:10px; margin-bottom:10px;">
+                <button class="btn btn-primary" style="width:100%;" id="btn-check-save">기록 저장하기</button>
             </div>
-            <div id="save-msg" style="display:none; color:#2ecc71; margin-bottom:10px;">저장 완료!</div>
-
-            <hr style="border:0; border-top:1px solid #444; margin:15px 0;">
-
-            <button class="btn" style="width:100%; background:#444;" onclick="gameLogic.revive()">5★ 한 줄 지우기</button>
-            <button class="btn" style="width:100%; background:#222;" onclick="location.href='index.html'">메인으로</button>
+            <div id="area-exist-user" style="display:none;">
+                <div id="user-badge" style="color:var(--accent); font-weight:bold; margin-bottom:10px;">User</div>
+                <button class="btn btn-primary" style="width:100%;" id="btn-just-save">리더보드에 저장</button>
+            </div>
+            <div id="save-msg" style="display:none; color:#2ecc71; margin:10px 0;">저장 완료!</div>
+            <button class="btn" style="width:100%; margin-top:10px;" onclick="location.href='index.html'">메인으로</button>
         </div>
     </div>
 
-    <script type="module" src="js/game-main.js"></script>
+    <script type="module" src="./js/game-main.js"></script>
 </body>
 </html>
