--- a/leaderboard.html
+++ b/leaderboard.html
@@ -19,6 +19,6 @@
         <button class="btn" style="margin-top:auto; margin-bottom:30px; background:#444;" onclick="location.href='index.html'">BACK TO MENU</button>
     </div>
 
-    <script type="module" src="js/leaderboard.js"></script>
+    <script type="module" src=".js/leaderboard.js"></script>
 </body>
 </html>
