--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Alpha-Z Rank</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="main-bg">
     <div class="screen">
-        <h1 class="title" style="margin-top:40px;">HALL OF FAME</h1>
+        <h1 style="color:var(--accent); margin-top:30px; margin-bottom:20px;">HALL OF FAME</h1>
         
-        <div class="leaderboard-container">
-            <div id="loading-text" style="color:#888; text-align:center; padding:20px;">Loading...</div>
-            <div id="rank-list" class="leaderboard-list">
-                </div>
+        <div class="rank-tabs">
+            <button class="tab-btn active" onclick="loadRank('EASY')">EASY</button>
+            <button class="tab-btn" onclick="loadRank('NORMAL')">NORMAL</button>
+            <button class="tab-btn" onclick="loadRank('HARD')">HARD</button>
+            <button class="tab-btn" onclick="loadRank('HELL')">HELL</button>
         </div>
 
-        <button class="btn" style="margin-top:auto; margin-bottom:30px; background:#444;" onclick="location.href='index.html'">BACK TO MENU</button>
-    </div>
+        <div id="loading-text" style="color:#888; padding:20px;">Loading...</div>
+        <div id="rank-list" class="leaderboard-list"></div>
 
-    <script type="module" src=".js/leaderboard.js"></script>
+        <button class="btn" style="margin-top:20px; width:100%; max-width:400px; background:#444;" onclick="location.href='index.html'">🏠 BACK TO MENU</button>
+    </div>
+    <script type="module" src="js/leaderboard.js"></script>
 </body>
 </html>
