--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body class="main-bg">
     <div class="screen">
-        <h1 style="font-size: 3.5rem; color: var(--accent); margin-top: 5vh; margin-bottom: 20px; text-shadow: 0 0 20px rgba(241,196,15,0.4);">Alpha-Z</h1>
-        
-        <div style="margin-bottom:20px; color:var(--accent); font-weight:bold; font-size:1.2rem;">
+        <h1 style="font-size: 3rem; color: var(--accent); margin-bottom: 20px;">Alpha-Z</h1>
+        <div style="margin-bottom:20px; color:var(--accent); font-weight:bold;">
             MY STARS: <span id="idx-stars">0</span>
         </div>
 
@@ -24,7 +23,7 @@
             <button class="btn" style="flex:1; background:#444;" onclick="location.href='leaderboard.html'">🏆 RANK</button>
         </div>
 
-        <div id="ad-container" style="margin-top: 40px; background:#000; padding:5px; border-radius:8px;">
+        <div id="ad-container" style="margin-top: 30px; background:#000; padding:5px; border-radius:8px;">
             <script>
               atOptions = { 'key' : '8806e983d7b1aa394a76278f45c55249', 'format' : 'iframe', 'height' : 250, 'width' : 300, 'params' : {} };
             </script>
