--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="main-bg">
     <div class="screen">
         <h1 style="font-size: 3rem; color: var(--accent); margin-bottom: 20px;">Alpha-Z</h1>
-        <div style="margin-bottom:20px; color:var(--accent); font-weight:bold;">
+        <div style="margin-bottom:20px; color:var(--accent); font-weight:bold; font-size:1.2rem;">
             MY STARS: <span id="idx-stars">0</span>
         </div>
 
