--- a/shop.html
+++ b/shop.html
@@ -14,22 +14,20 @@
         </div>
 
         <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:100%; max-width:400px;">
-            <div class="btn" onclick="watchAd()" style="padding:20px; flex-direction:column;">
+            <div class="btn" id="shop-ad-btn" onclick="watchAd()" style="padding:20px; flex-direction:column;">
                 <div style="font-size:2rem;">📺</div>
                 <div>Watch Ad</div>
                 <div style="color:var(--accent);">+1 Star</div>
             </div>
             <div class="btn" style="padding:20px; flex-direction:column; cursor:default;">
                 <div style="font-size:2rem;">🔄</div>
-                <div>Refresh Block</div>
+                <div>Refresh</div>
                 <div style="color:var(--accent);">1 Star</div>
-                <small style="color:#888;">Use in Game</small>
             </div>
             <div class="btn" style="padding:20px; flex-direction:column; cursor:default; grid-column: span 2;">
                 <div style="font-size:2rem;">🔨</div>
                 <div>Hammer (Delete 1 Cell)</div>
                 <div style="color:var(--accent);">2 Stars</div>
-                <small style="color:#888;">Use in Game</small>
             </div>
         </div>
 
