--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Alpha-Z</title>
+    <title>Alpha-Z | Addictive Alphabet Merge Puzzle Game</title>
+    <meta name="description" content="Merge alphabets, save space, and reach Z! Play Alpha-Z, a highly addictive free puzzle game online.">
+    <meta name="keywords" content="Alpha-Z, puzzle game, alphabet merge, 2048 alternative, brain game, free online game">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://alpha-z.pages.dev">
+    
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body class="main-bg">
     <div class="screen">
-        <h1 style="font-size: 3rem; color: var(--accent); margin-bottom: 20px;">Alpha-Z</h1>
+        <button id="install-btn" class="btn btn-primary" style="display:none; width:250px; margin-bottom: 20px;">📱 Install App (Play Offline)</button>
+
+        <h1 style="font-size: 3.5rem; color: var(--accent); margin-bottom: 20px; text-shadow: 0 0 20px rgba(241,196,15,0.4);">Alpha-Z</h1>
         <div style="margin-bottom:20px; color:var(--accent); font-weight:bold; font-size:1.2rem;">
             MY STARS: <span id="idx-stars">0</span>
         </div>
@@ -30,6 +38,6 @@
             <script src="https://www.highperformanceformat.com/8806e983d7b1aa394a76278f45c55249/invoke.js"></script>
         </div>
     </div>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
