--- a/shop.html
+++ b/shop.html
@@ -13,11 +13,11 @@
             My Stars: <strong id="shop-stars" style="color:var(--accent);">0</strong>
         </div>
 
-        <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:100%; max-width:400px;">
-            <div class="btn" id="shop-ad-btn" onclick="watchAd()" style="padding:20px; flex-direction:column;">
-                <div style="font-size:2rem;">📺</div>
-                <div>Watch Ad</div>
-                <div style="color:var(--accent);">+1 Star</div>
+    <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:100%; max-width:400px;">
+        <button class="btn" id="shop-ad-btn" onclick="watchAdShop()" style="padding:20px; flex-direction:column; border:none;">
+            <div style="font-size:2rem;">📺</div>
+            <div id="ad-text-status">Watch Ad</div>
+            <div style="color:var(--accent);">+2 Stars</div> </button>
             </div>
             <div class="btn" style="padding:20px; flex-direction:column; cursor:default;">
                 <div style="font-size:2rem;">🔄</div>
