--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    
+    <meta name="google-site-verification" content="jpV9ytZrmyOE3ncVmwd9y67IjH7vbZ_W5f1p-c7R940" />
+
     <title>Alpha-Z | Addictive Alphabet Merge Puzzle Game</title>
     <meta name="description" content="Merge alphabets, save space, and reach Z! Play Alpha-Z, a highly addictive free puzzle game online.">
     <meta name="keywords" content="Alpha-Z, puzzle game, alphabet merge, 2048 alternative, brain game, free online game">
