--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
     <div class="screen">
         <div class="header">
             <div class="stat"><span>BEST</span><strong id="ui-best">A</strong></div>
-            <div class="stat"><span>SCORE</span><strong id="ui-stars">0</strong></div>
+            <div class="stat"><span>⭐</span><strong id="ui-stars">0</strong></div>
             <div class="stat"><span>LEVEL</span><strong id="ui-diff">-</strong></div>
         </div>
 
