--- a/game.html
+++ b/game.html
@@ -6,14 +6,13 @@
     <title>Alpha-Z Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="game-mode">
     <div class="screen">
         <div class="header">
             <div class="stat"><span>BEST</span><strong id="ui-best">A</strong></div>
             <div class="stat"><span style="font-size: 14px;">⭐</span><strong id="ui-stars">0</strong></div>
             <div class="stat"><span>LEVEL</span><strong id="ui-diff">-</strong></div>
         </div>
-
         <div class="game-area">
             <div class="next-zone">
                 <span style="font-size:10px; color:#888; margin-bottom:5px;">NEXT</span>
