--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="Alpha-Z, puzzle game, alphabet merge, 2048 alternative, brain game, free online game">
     <meta name="robots" content="index, follow">
     
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="icon-180.png">
+    
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 </head>
