--- a/game.html
+++ b/game.html
@@ -32,8 +32,8 @@
         </div>
 
         <div style="display:flex; width:100%; max-width:500px; gap:8px;">
-            <button class="btn" style="flex:1; background:#444;" onclick="location.href='index.html'">🏠 Menu</button>
-            <button class="btn btn-primary" style="flex:1;" onclick="location.href='shop.html'">🛒 Shop</button>
+            <button class="btn" style="flex:1; background:#444;" onclick="location.href='./index.html'">🏠 Menu</button>
+            <button class="btn btn-primary" style="flex:1;" onclick="location.href='./shop.html'">🛒 Shop</button>
         </div>
     </div>
 
