--- a/leaderboard.html
+++ b/leaderboard.html
@@ -21,7 +21,7 @@
         
         <div id="rank-list" class="leaderboard-list" style="margin-bottom: 20px;"></div>
 
-        <button class="btn" style="width:100%; max-width:400px; background:#444;" onclick="location.href='index.html'">🏠 BACK TO MENU</button>
+        <button class="btn" style="width:100%; max-width:400px; background:#444;" onclick="location.href='/'">🏠 BACK TO MENU</button>
     </div>
     
     <script type="module" src="js/leaderboard.js"></script>
