--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <button class="btn" style="margin-top:20px; width:100%; max-width:400px;" onclick="location.href='index.html'">🏠 Main Menu</button>
+        <button class="btn" style="margin-top:20px; width:100%; max-width:400px;" onclick="location.href='/'">🏠 Main Menu</button>
     </div>
     <script type="module" src="js/shop.js"></script>
 </body>
