--- a/game.html
+++ b/game.html
@@ -61,7 +61,7 @@
                 📺 Revive (Get Special 1x1 Block)
             </button>
             
-            <button class="btn" style="width:100%; background:#222;" onclick="location.href='index.html'">Main Menu</button>
+            <button class="btn" style="width:100%; background:#222;" onclick="location.href='/'">Main Menu</button>
         </div>
     </div>
 
