--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             // installBtn.style.display = 'none'; 
         });
     </script>
-    
+    <script type="module" src="js/game-main.js?v=1.1"></script>
     <script type="module" src="./js/index.js"></script>
 </body>
 </html>
