--- a/leaderboard.html
+++ b/leaderboard.html
@@ -130,7 +130,7 @@
             <div id="loading" class="loading-text">Loading...</div>
         </div>
 
-        <button class="back-btn" onclick="location.href='index.html'">⬅ BACK TO GAME</button>
+        <button class="back-btn" onclick="location.href='/'">⬅ BACK TO GAME</button>
     </div>
 
     <script type="module">
